--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
-#spring.datasource.username=admin
-#spring.datasource.password=admin
-#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=msi
+spring.datasource.password=mercury
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
