--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=msi
-spring.datasource.password=mercury
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-
-#spring.datasource.url=jdbc:oracle:thin:@//132.98.25.72:1521/gzcent
-#spring.datasource.username=wangzy505
-#spring.datasource.password=U41#9_7B
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+#spring.datasource.username=msi
+#spring.datasource.password=mercury
 #spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+
+spring.datasource.url=jdbc:oracle:thin:@//132.98.25.72:1521/gzcent
+spring.datasource.username=wangzy505
+spring.datasource.password=U41#9_7B
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
