--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,17 @@
 #spring.datasource.username=msi
 #spring.datasource.password=mercury
 #spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-
 spring.datasource.url=jdbc:oracle:thin:@//132.98.25.72:1521/gzcent
 spring.datasource.username=wangzy505
 spring.datasource.password=U41#9_7B
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+# 邮件配置
+# 邮箱服务器地址
+spring.mail.host=smtp.163.com
+# 用户名
+spring.mail.username=wangzeyuan0316@163.com
+# 授权码
+spring.mail.password=GODDQOBNVPGCXLLX
+spring.mail.default-encoding=UTF-8
+# 以哪个邮箱发送邮件
+mail.fromMail.addr=wangzeyuan0316@163.com
