--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.mail.host=smtp.163.com
 # 用户名
 spring.mail.username=wangzeyuan0316@163.com
 # 授权码
-spring.mail.password=GODDQOBNVPGCXLLX
+spring.mail.password=
 spring.mail.default-encoding=UTF-8
 # 以哪个邮箱发送邮件
 mail.fromMail.addr=wangzeyuan0316@163.com
